--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.6.0",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.33.1",
@@ -33,7 +32,6 @@
     "unplugin-vue-components": "^0.22.12",
     "unplugin-vue-macros": "^1.0.3",
     "vite": "^4.0.0",
-    "vite-plugin-pages": "^0.27.1",
     "vitest": "^0.25.7",
     "vue-tsc": "^1.0.13"
   },
