--- a/package.json
+++ b/package.json
@@ -11,29 +11,31 @@
     "up": "taze major -I"
   },
   "dependencies": {
-    "@vueuse/core": "^9.6.0",
+    "@vueuse/core": "^9.10.0",
+    "canvas-confetti": "^1.6.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.33.1",
-    "@iconify-json/carbon": "^1.1.11",
-    "@types/node": "^18.11.13",
+    "@iconify-json/carbon": "^1.1.13",
+    "@types/canvas-confetti": "^1.6.0",
+    "@types/node": "^18.11.18",
     "@unocss/reset": "^0.47.6",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue-macros/volar": "^0.5.4",
+    "@vue-macros/volar": "^0.5.7",
     "@vue/test-utils": "^2.2.6",
-    "eslint": "^8.29.0",
+    "eslint": "^8.31.0",
     "jsdom": "^20.0.3",
-    "pnpm": "^7.18.1",
-    "taze": "^0.8.4",
+    "pnpm": "^7.22.0",
+    "taze": "^0.8.5",
     "typescript": "^4.9.4",
     "unocss": "^0.47.6",
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
-    "unplugin-vue-macros": "^1.0.3",
-    "vite": "^4.0.0",
-    "vitest": "^0.25.7",
-    "vue-tsc": "^1.0.13"
+    "unplugin-vue-macros": "^1.2.2",
+    "vite": "^4.0.4",
+    "vitest": "^0.25.8",
+    "vue-tsc": "^1.0.20"
   },
   "eslintConfig": {
     "extends": "@antfu"
